--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <div class="third_Statistics__item">
               <img src="./img/shoping.svg" alt="shoping" />
               <div class="Statistics__item__list">
-                <img src="./img/52%.svg" alt="52%" />
+                <img src="./img/Shoppping.svg" alt="Shoppping" />
                 <span>Shoppping</span>
               </div>
               <h2>52%</h2>   
@@ -194,7 +194,7 @@
             <div class="third_Statistics__item">
               <img src="./img/car.svg" alt="car" />
               <div class="Statistics__item__list">
-                <img src="./img/21%.svg" alt="21%" />
+                <img src="./img/Electronics.svg" alt="Electronics" />
                 <span>Electronics</span>
               </div>
               <h2>21%</h2>
@@ -202,7 +202,7 @@
             <div class="third_Statistics__item">
               <img src="./img/airplane.svg" alt="airplanev" />
               <div class="Statistics__item__list">
-                <img src="./img/74%.svg" alt="74%" />
+                <img src="./img/Travels.svg" alt="Travels" />
                 <span>Travels</span>
               </div>
               <h2>74%</h2>
